added contact page

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Contact</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -198,25 +198,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Contact</h1>
 
 </div>
 
 
 <hr />
-<p>I’m a 25-year-old data analyst who currently lives in San Francisco, California.</p>
-<p>My passions for analytics can be summarized into:</p>
-<ul>
-<li>Reproducible research, report generation (R, RMarkdown)</li>
-<li>Interactive visualization (primarily <a href="https://github.com/davidgohel/ggiraph">ggiraph</a>)</li>
-<li>Machine learning</li>
-</ul>
-<p>My passions outside of work fall in to:</p>
-<ul>
-<li>Weightlifting and fitness</li>
-<li>Cooking and nutrition</li>
-<li>Music</li>
-</ul>
+<p><strong>email</strong>: <a href="mailto:statsbeau@gmail.com">statsbeau@gmail.com</a></p>
+<p><strong>linkedin</strong>: <a href="https://www.linkedin.com/in/beaulucas" class="uri">https://www.linkedin.com/in/beaulucas</a></p>
+<p><strong>github</strong>: <a href="https://github.com/beaulucas" class="uri">https://github.com/beaulucas</a></p>
 
 
 
