--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -198,24 +198,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<hr />
-<p>I’m a 25-year-old data analyst who currently lives in San Francisco, California.</p>
-<p>My passions for analytics can be summarized into:</p>
+<p>Here are my current projects:</p>
 <ul>
-<li>Reproducible research, report generation (R, RMarkdown)</li>
-<li>Interactive visualization (primarily <a href="https://github.com/davidgohel/ggiraph">ggiraph</a>)</li>
-<li>Machine learning</li>
-</ul>
-<p>My passions outside of work fall in to:</p>
-<ul>
-<li>Weightlifting and fitness</li>
-<li>Cooking and nutrition</li>
-<li>Music</li>
+<li><strong><em><a href="beaulucas.github.io/tidy_islr">Tidy ISLR</a></em></strong></li>
+<li><em>Tidy ISLR</em> is a recreation of ISLR textbook built with bookdown and using modern R code (mostly of the tidyverse)</li>
 </ul>
 
 
