--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My Website</title>
+<title>Welcome to my page!</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -173,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">Beau Lucas</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -181,7 +181,10 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About Me</a>
+</li>
+<li>
+  <a href="contact.html">Contact</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -195,13 +198,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">My Website</h1>
+<h1 class="title toc-ignore">Welcome to my page!</h1>
 
 </div>
 
 
-<p>Hello, website!</p>
-<p>test</p>
+<hr />
+<p>This is my landing spot to share my current projects, interests, and resume.</p>
+<p>Currently working on: <strong><em><a href="beaulucas.github.io/tidy_islr">Tidy ISLR</a></em></strong></p>
+<p><em>This site was built with <a href="https://rmarkdown.rstudio.com/rmarkdown_websites.html">RMarkdown Websites</a></em></p>
 
 
 
