broken link fixed

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ $(document).ready(function () {
 
 <hr />
 <p>This is my landing spot to share my current projects, interests, and resume.</p>
-<p>Currently working on: <strong><em><a href="beaulucas.github.io/tidy_islr">Tidy ISLR</a></em></strong></p>
+<p>Currently working on: <strong><em><a href="https://beaulucas.github.io/tidy_islr">Tidy ISLR</a></em></strong></p>
 <p><em>This site was built with <a href="https://rmarkdown.rstudio.com/rmarkdown_websites.html">RMarkdown Websites</a></em></p>
 
 
