added more to index

--- a/about.html
+++ b/about.html
@@ -204,18 +204,18 @@ $(document).ready(function () {
 
 
 <hr />
-<p>I’m a 25-year-old data analyst who currently lives in San Francisco, California.</p>
-<p>My passions for analytics can be summarized into:</p>
+<p>I’m a data scientist who currently lives and works in San Francisco, California.</p>
+<p>Some of my favorite topics in data programming / data analytics:</p>
 <ul>
 <li>Reproducible research, report generation (R, RMarkdown)</li>
-<li>Interactive visualization (primarily <a href="https://github.com/davidgohel/ggiraph">ggiraph</a>)</li>
-<li>Machine learning</li>
+<li>Interactive visualizations (R, <a href="https://github.com/davidgohel/ggiraph">ggiraph</a>)</li>
+<li>Predictive modeling, statistical learning techniques</li>
 </ul>
 <p>My passions outside of work fall in to:</p>
 <ul>
-<li>Weightlifting and fitness</li>
-<li>Cooking and nutrition</li>
-<li>Music</li>
+<li>Weightlifting, fitness</li>
+<li>Cooking, nutrition</li>
+<li>Music production, audio engineering</li>
 </ul>
 
 
