--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ $(document).ready(function () {
 <hr />
 <p>This is my landing spot to share my current projects, interests, and resume.</p>
 <p>Currently working on: <strong><em><a href="https://beaulucas.github.io/tidy_islr">Tidy ISLR</a></em></strong></p>
-<p><em>This site was built with <a href="https://rmarkdown.rstudio.com/rmarkdown_websites.html">RMarkdown Websites</a></em></p>
+<ul>
+<li><em>Tidy ISLR</em> is a re-imagining of the classic textbook <a href="https://www-bcf.usc.edu/~gareth/ISL/">Introduction to Statistical Learning</a>. It replaces the outdated R scripts in the book with modern, <a href="https://www.tidyverse.org/">tidyverse</a>-style code. It is also wrapped in a modern media format, <a href="https://www.rstudio.com/resources/webinars/introducing-bookdown/">Bookdown</a>. The book is made entirely in RStudio.</li>
+</ul>
 
 
 
