added projects page, updated others

--- a/book_reviews.html
+++ b/book_reviews.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Contact</title>
+<title>Book Reviews</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -310,16 +310,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Contact</h1>
+<h1 class="title toc-ignore">Book Reviews</h1>
 
 </div>
 
 
 <hr />
-<p><strong>email</strong>: <a href="mailto:statsbeau@gmail.com" class="email">statsbeau@gmail.com</a></p>
-<p><strong>linkedin</strong>: <a href="https://www.linkedin.com/in/beaulucas" class="uri">https://www.linkedin.com/in/beaulucas</a></p>
-<p><strong>github</strong>: <a href="https://github.com/beaulucas" class="uri">https://github.com/beaulucas</a></p>
-<p><strong>twitter</strong>: <a href="https://twitter.com/beaulcs" class="uri">https://twitter.com/beaulcs</a></p>
+<ol style="list-style-type: decimal">
+<li>R for Data Science</li>
+<li>Python Data Science Handbook</li>
+<li>Introduction To Statistical Learning</li>
+<li>Problem Solving With Algorithms and Data Structures</li>
+</ol>
 
 
 
