--- a/about.html
+++ b/about.html
@@ -69,9 +69,7 @@ h6 {
 </style>
 
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -90,8 +88,14 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
+}
+summary {
+  display: list-item;
 }
 </style>
 
@@ -107,7 +111,6 @@ body {
   padding-top: 56px;
   margin-top: -56px;
 }
-
 .section h2 {
   padding-top: 56px;
   margin-top: -56px;
@@ -127,6 +130,43 @@ body {
 .section h6 {
   padding-top: 56px;
   margin-top: -56px;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+  border-left-color: #ffffff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  border-radius: 6px 0 6px 6px;
 }
 </style>
 
@@ -148,19 +188,85 @@ $(document).ready(function () {
 });
 </script>
 
-
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "&#xe258;";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
+});
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
 });
 </script>
 
 <!-- code folding -->
 
 
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
 
 
 
@@ -186,6 +292,12 @@ $(document).ready(function () {
 <li>
   <a href="contact.html">Contact</a>
 </li>
+<li>
+  <a href="projects.html">Projects</a>
+</li>
+<li>
+  <a href="book_reviews.html">Book Reviews</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -204,19 +316,22 @@ $(document).ready(function () {
 
 
 <hr />
-<p>I’m a data scientist who currently lives and works in San Francisco, California.</p>
-<p>Some of my favorite topics in data programming / data analytics:</p>
+<p>I’m a data scientist who lives and works in San Francisco. My focus is on modern data science workflows (primarily in R), reproducible research, and efficient code.</p>
+<p>My language of choice for data science is R due to its functional nature and outstanding workflow capabilities of <code>tidyverse</code> + <code>RStudio</code> combination. I also use Python, but for different purposes.</p>
+<p>Currently, I am employed by <span class="citation">@Twitter</span> in the <span class="citation">@MoPub</span> organization, where I work on improving our mobile advertising exchange.</p>
+<div id="work-experience" class="section level3">
+<h3>Work Experience</h3>
 <ul>
-<li>Reproducible research, report generation (R, RMarkdown)</li>
-<li>Interactive visualizations (R, <a href="https://github.com/davidgohel/ggiraph">ggiraph</a>)</li>
-<li>Predictive modeling, statistical learning techniques</li>
+<li><strong>Exchange Analyst</strong>, Twitter, 2018 - present</li>
+<li><strong>Data Analyst</strong>, Glu Mobile, 2016 - 2018</li>
 </ul>
-<p>My passions outside of work fall in to:</p>
+</div>
+<div id="education" class="section level3">
+<h3>Education</h3>
 <ul>
-<li>Weightlifting, fitness</li>
-<li>Cooking, nutrition</li>
-<li>Music production, audio engineering</li>
+<li><em>B.S, Statistical Sciences</em>: University of California, Santa Barbara, 2015</li>
 </ul>
+</div>
 
 
 
